# wake-on-lan

./: .gitignore  README.md  justfile  test.py  test.sh  test_server.py
.github/workflows/: release.yaml
c/: meson.build  wol.c
go/: go.mod  wol.go
go-wol/: go.mod  wol.go
js/: wol.js
perl/: wol.pl
python/: wol.py
rust/: Cargo.toml
rust/src/: main.rs
sh/: wol.sh
