[package]
name = "wol"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Hubert Piechota <mtvrs@tuta.io>"]
description = "Cross platform wake on lan client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
macaddr = "1.0.1"
